hphp/test/slow/coeffects/compilation/test_bad.php.expectf
Fatal error: Cannot use unstable feature: `coeffects_provisional` in %s/coeffects/compilation/test_bad.php on line 4
